--- a/biografia.css
+++ b/biografia.css
@@ -54,6 +54,7 @@ body {
     background-color: #219394;
     color: white;
     text-align: center;
+    margin-top: 170px;
     padding: 25px;
     width: 100%;
 }
